--- a/TODO.org
+++ b/TODO.org
@@ -7,10 +7,11 @@
 - [ ] Deliver to el-get
 - [ ] Deliver to marmalade
 
-* IN-PROGRESS 0.0.1 [40%]
+* IN-PROGRESS 0.0.1 [50%]
 
 - [X] Agnostify existing code
 - [X] Improve readme
-- [ ] Add version
+- [X] Add version
+- [ ] Add cask
 - [ ] Add tests
 - [ ] Plug ci
