- [X] Add some other tests

--- a/TODO.org
+++ b/TODO.org
@@ -6,13 +6,13 @@
 - [ ] Deliver to melpa
 - [ ] Deliver to el-get
 
-* IN-PROGRESS 0.0.1 [55%]
+* IN-PROGRESS 0.0.1 [66%]
 - [X] Agnostify existing code
 - [X] Improve readme
 - [X] Add version
 - [X] Add cask
 - [X] Add some tests
-- [ ] Add some other tests
+- [X] Add some other tests
 - [ ] Plug ci
 - [ ] Plug script release
 - [ ] Deliver to marmalade
