--- a/TODO.org
+++ b/TODO.org
@@ -1,12 +1,12 @@
 #+title: backlog
 #+author: ardumont
 
-* IN-PROGRESS 0.0.2 [50%]
+* IN-PROGRESS 0.0.2 [62%]
 - [X] Fix release script error
 - [X] Add missing autoload statements
 - [X] Fix ci
 - [X] Improve documentation (README, doc comment...)
-- [ ] Add license
+- [X] Add license
 - [ ] Update version
 - [ ] Deliver to melpa
 - [ ] Deliver to el-get
