--- a/TODO.org
+++ b/TODO.org
@@ -13,6 +13,7 @@
 - [X] Add license
 - [X] Update version
 - [X] Fix celery-compute-tasks-consumed-workers + add tests
+- [X] Improve user's custom filter on workers
 
 * DONE 0.0.1 [100%]
 CLOSED: [2015-08-07 Fri 20:28]
