--- a/TODO.org
+++ b/TODO.org
@@ -16,6 +16,7 @@ CLOSED: [2015-08-08 Sat 11:33]
 - [X] Fix celery-compute-tasks-consumed-workers + add tests
 - [X] Improve user's custom filter on workers
 - [X] Refactoring (improve code + add tests)
+- [X] Release notes
 
 * DONE 0.0.1 [100%]
 CLOSED: [2015-08-07 Fri 20:28]
