--- a/TODO.org
+++ b/TODO.org
@@ -1,9 +1,9 @@
 #+title: backlog
 #+author: ardumont
 
-* IN-PROGRESS 0.0.3 [20%]
+* IN-PROGRESS 0.0.3 [40%]
 - [X] Simplify json parsing
-- [ ] Fix potential total sum problem
+- [X] Fix total tasks done problems when multiple tasks
 - [ ] Simplify data model representation
 - [ ] Deliver to melpa
 - [ ] Deliver to el-get
