--- a/TODO.org
+++ b/TODO.org
@@ -1,12 +1,13 @@
 #+title: backlog
 #+author: ardumont
 
-* IN-PROGRESS 0.0.3 [80%]
+* IN-PROGRESS 0.0.3 [100%]
 - [X] Simplify json parsing
 - [X] Fix total tasks done problems when multiple tasks
 - [X] Add group for customization group
 - [X] melpa - https://github.com/milkypostman/melpa/pull/3002
-- [ ] el-get
+- [X] el-get - https://github.com/dimitri/el-get/pull/2230
+- [ ] Release notes
 
 * DONE 0.0.2 [100%]
 CLOSED: [2015-08-08 Sat 11:33]
