--- a/TODO.org
+++ b/TODO.org
@@ -1,7 +1,8 @@
 #+title: backlog
 #+author: ardumont
 
-* IN-PROGRESS 0.0.3 [100%]
+* DONE 0.0.3 [100%]
+CLOSED: [2015-08-08 Sat 20:56]
 - [X] Simplify json parsing
 - [X] Fix total tasks done problems when multiple tasks
 - [X] Add group for customization group
